# rust_gpu_gradient_triangle

./: Cargo.toml  main.rs  wgsl_triangle.rs
assets/shaders/: minimal_triangle.wgsl
assets/shaders/gradient_triangle/: Cargo.toml
assets/shaders/gradient_triangle/src/: lib.rs
examples/: spirv_triangle.rs  wgsl_triangle.rs
gradient_triangle/: Cargo.toml
gradient_triangle/src/: lib.rs
src/: gradient_triangle_pipeline.rs  lib.rs
